<resources>
    <string name="app_name">Aprende Mientras Juegas</string>
    <string name="sign_in">Iniciar Sesión</string>

    <string name="txtid">Usuario</string>
    <string name="txtpw">Contraseña</string>
    <string name="btn_signin">Iniciar Sesión</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_forgotPsswd">Recuperar Contraseña</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Nosotros</string>
    <string name="menu_slideshow">Aula Virtual</string>
    <string name="menu_Entities">Entidades Publicas</string>
    <string name="menu_Info">Creditos</string>
    <string name="message_home">Pantalla de Inicio</string>
    <string name="message_about_us">Pantalla de Acerca de...</string>
    <string name="message_VC">Pantalla de Campus virtual</string>
    <string name="message_EP">Pantalla de Entidades</string>
    <string name="message_Credits">Pantalla de Creditos</string>
    <string name="txt_LWP">Aprende Mientras Juegas, dedicado al aprendizaje virtual!</string>
    <string name="txt_LWP_mail">learnwhileplaying@gmail.com</string>
    <string name="navigation_drawer_open">Abrir dibujo de navegacion</string>
    <string name="navigation_drawer_close">Cerrar dibujo de navegación</string>
    <string name="text_INA">El INA forma, capacita y certifica a personas físicas y jurídicas, para contribuir al crecimiento personal, movilidad social, productividad y competitividad; que permita al país adaptarse a los cambios que el entorno exige</string>
    <string name="text_MEP">El Ministerio de Educación Pública (MEP) de Costa Rica es el ministerio de gobierno encargado de administrar el sistema de educación pública del país.  Sus funciones principales son las de ejecutar planes, programas y otras determinaciones que garanticen una educación general básica, pública y gratuita, coordinar las relaciones del Poder Ejecutivo</string>
    <string name="title_entities">Entidades Reconocedoras</string>
    <string name="title_Credits">Creditos Correspondientes</string>
    <string name="text_Credits">Creditos hacía quienes participaron en la creación de este proyecto. Participantes: Kenneth Piedra Vargas, William Cubero Navarro, Eduard Andrés Arias Quiros y Sebastián Alberto Mata Ortega</string>
    <string name="about_text">LWP es una empresa líder en soluciones tecnológicas con más de 10 años de experiencia en el mercado. Nos dedicamos a desarrollar aplicaciones móviles y sistemas web de alta calidad para nuestros clientes en todo el mundo.</string>
    <string name="contact_info_text">Contacto: Dirección: Calle Principal #123, Ciudad Tech, Teléfono: +123 456 7890, Correo: info@lwp.com</string>
    <string name="comment_hint">Deja tu comentario…</string>
    <string name="submit_comment_text">Enviar comentario</string>
</resources>