<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_info_text"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"/>

        <!-- Aquí van nuevamente las vistas de texto -->

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonSubmitComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_comment_text"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

    </LinearLayout>
</ScrollView>